--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-s3XgLpvmHyscVpijnseAmye819Ee3yaGa8NxstkJVyA6nuDFjt59u1QvuEl/mecz"
       crossorigin="anonymous"
     ></script>
-    <title>todo</title>
+    <title>Dapp Games</title>
   </head>
   <body>
     <noscript>
